--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,9 @@
         <activity
             android:name=".MenuActivity"
             android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" />
-
+        <activity
+            android:name=".NewsListActivity"
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" />
     </application>
 
 </manifest>
