--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">
-
         <activity
             android:name=".MainActivity"
             android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">
@@ -37,7 +36,8 @@
         <activity
             android:name=".NewsListActivity"
             android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" />
-        <activity android:name=".NewsOpenActivity"></activity>
+        <activity android:name=".NewsOpenActivity" />
+        <activity android:name=".SaladPageActivity"></activity>
     </application>
 
 </manifest>
