Wine List Complete

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,8 @@
         <activity
             android:name=".WinePageActivity"
             android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" />
-        <activity android:name=".SaladListActivity"></activity>
+        <activity android:name=".SaladListActivity" />
+        <activity android:name=".WineListActivity"></activity>
     </application>
 
 </manifest>
